--- a/pom.xml
+++ b/pom.xml
@@ -11,27 +11,14 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.release>21</maven.compiler.release>
-
     <cucumber.version>7.18.0</cucumber.version>
     <restassured.version>5.5.0</restassured.version>
     <lombok.version>1.18.34</lombok.version>
     <surefire.version>3.2.5</surefire.version>
     <parallel.mode>classes</parallel.mode>
     <parallel.threads>4</parallel.threads>
+    <allure.version>2.30.0</allure.version>
   </properties>
-
-  <!-- Allure BOM to manage Allure versions -->
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>io.qameta.allure</groupId>
-        <artifactId>allure-bom</artifactId>
-        <version>2.30.0</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
 
   <dependencies>
     <!-- Rest Assured -->
@@ -106,6 +93,7 @@
     <dependency>
       <groupId>io.qameta.allure</groupId>
       <artifactId>allure-cucumber7-jvm</artifactId>
+      <version>${allure.version}</version>
       <scope>test</scope>
     </dependency>
 
